examples/resources/cnp_log4shell.yaml
apiVersion: 'cilium.io/v2'
kind: CiliumNetworkPolicy
metadata:
  name: 'log4shell'
  namespace: netpols
spec:
  endpointSelector:
    matchLabels:
      org: java
      class: api-interface
  egress:
    - toFQDNs:
        - matchName: 'api.google.com'
    - toEndpoints:
        - matchLabels:
            'k8s:io.kubernetes.pod.namespace': kube-system
            'k8s:k8s-app': kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'
